<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >


    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search"
        android:iconTint="@color/white"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom"/>

    <group android:checkableBehavior="single"
        >

        <item
            android:id="@+id/menu_sort_by"
            android:title="@string/sort_by">
            <menu>
                <item android:id="@+id/menu_high"
                    android:title="@string/high_priority"/>
                <item android:id="@+id/menu_medium"
                    android:title="@string/medium_priority"/>
                <item android:id="@+id/menu_low"
                    android:title="@string/low_priority"
                    />

            </menu>

        </item>

    </group>
    <item
        android:title="@string/delete_all"
        android:id="@+id/menu_delete_all"
        app:showAsAction="never"
        />
</menu>